; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/powermac/extr_pfunc_core.c_pmf_parser_rmw_cfg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/powermac/extr_pfunc_core.c_pmf_parser_rmw_cfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmf_cmd = type { i32 }
%struct.pmf_handlers = type { i32 }

@.str = private unnamed_addr constant [67 x i8] c"pmf: rmw_cfg(maskbytes: %ud, valuebytes: %ud, totalbytes: %d) ...\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"pmf:   mask data: \0A\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"pmf:   values data: \0A\00", align 1
@rmw_cfg = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pmf_cmd*, %struct.pmf_handlers*)* @pmf_parser_rmw_cfg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pmf_parser_rmw_cfg(%struct.pmf_cmd* %0, %struct.pmf_handlers* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pmf_cmd*, align 8
  %5 = alloca %struct.pmf_handlers*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  store %struct.pmf_cmd* %0, %struct.pmf_cmd** %4, align 8
  store %struct.pmf_handlers* %1, %struct.pmf_handlers** %5, align 8
  %12 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %13 = call i32 @pmf_next32(%struct.pmf_cmd* %12)
  store i32 %13, i32* %6, align 4
  %14 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %15 = call i32 @pmf_next32(%struct.pmf_cmd* %14)
  store i32 %15, i32* %7, align 4
  %16 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %17 = call i32 @pmf_next32(%struct.pmf_cmd* %16)
  store i32 %17, i32* %8, align 4
  %18 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %19 = call i32 @pmf_next32(%struct.pmf_cmd* %18)
  store i32 %19, i32* %9, align 4
  %20 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i8* @pmf_next_blob(%struct.pmf_cmd* %20, i32 %21)
  store i8* %22, i8** %10, align 8
  %23 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i8* @pmf_next_blob(%struct.pmf_cmd* %23, i32 %24)
  store i8* %25, i8** %11, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @LOG_PARSE(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0), i32 %26, i32 %27, i32 %28)
  %30 = load i8*, i8** %10, align 8
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @LOG_BLOB(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* %30, i32 %31)
  %33 = load i8*, i8** %11, align 8
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @LOG_BLOB(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i8* %33, i32 %34)
  %36 = load i32, i32* @rmw_cfg, align 4
  %37 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %38 = load %struct.pmf_handlers*, %struct.pmf_handlers** %5, align 8
  %39 = load i32, i32* %6, align 4
  %40 = load i32, i32* %7, align 4
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* %9, align 4
  %43 = load i8*, i8** %10, align 8
  %44 = load i8*, i8** %11, align 8
  %45 = call i32 @PMF_PARSE_CALL(i32 %36, %struct.pmf_cmd* %37, %struct.pmf_handlers* %38, i32 %39, i32 %40, i32 %41, i32 %42, i8* %43, i8* %44)
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i32 @pmf_next32(%struct.pmf_cmd*) #1

declare dso_local i8* @pmf_next_blob(%struct.pmf_cmd*, i32) #1

declare dso_local i32 @LOG_PARSE(i8*, i32, i32, i32) #1

declare dso_local i32 @LOG_BLOB(i8*, i8*, i32) #1

declare dso_local i32 @PMF_PARSE_CALL(i32, %struct.pmf_cmd*, %struct.pmf_handlers*, i32, i32, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
